@@ -1,6 +1,4 @@
 
-#define COPT               "-Wall -O2 --std=c++0x"
-
 #define ECHO_REQUEST       1
 
 #define LIBS               "bobcat"
@@ -8,6 +6,7 @@
 
 
 string                  // contain options for
+    g_copt,             // compiler options
     g_cwd,              // current WD
     libs,               // extra libs, e.g., "-lrss -licce"
     libpath,            // extra lib-paths, eg, "-L../rss"
@@ -18,6 +17,22 @@ int
     g_nClasses;         // number of classes/subdirectories
 list
     g_classes;          // list of classes/directories
+
+
+setGcopt(string always)
+{
+    list optvar;
+
+    optvar = getenv("CPPFLAGS");    
+
+    g_copt = always;
+
+    if (optvar[0] == "1")
+        g_copt += optvar[1];
+    else if (CPPOPT != "")
+        g_copt += CPPOPT;
+}
+
 
 void setClasses()
 {
@@ -106,7 +121,7 @@ void c_compile(int prefix, string srcDir, list cfiles)
         file = element(idx, cfiles);
         
         run(compiler + change_ext(file, "o") + " " + 
-                COPT + " " + srcDir + "/" + file);
+                g_copt + " " + srcDir + "/" + file);
     }
 }
 
@@ -171,6 +186,8 @@ void program()
     md("tmp/bin tmp/o");
     
     special();
+
+    setGcopt("-Wall --std=c++0x ");
 
     cpp_make
     (
