@@ -1,6 +1,17 @@
 COMMENT(
-    With 2.0.0:
+    With 2.02.00:
 )
+    itemization(
+    it() The file specified at the option -s (--skip-files) may contain empty
+lines and lines having a tt(#) as their 1st non-blank character. These lines
+are ignored. Furthermore, initial and trailing blanks on its lines are
+ignored.
+    it() NOTE: requires bobcat 2.17.00 or later
+    )
+
+COMMENT(
+    With 2.0.0:
+
     itemization(
     it() Repaired handling of the tt(-o) flag;
     it() Implemented option -s (--skip-files) to skip the integrity-test of
@@ -9,6 +20,7 @@ COMMENT(
     log-message "SKIPPING"
     it() NOTE: requires bobcat 2.09.00 or later
     )
+)
 
 COMMENT(
     With 1.47:
