@@ -5,8 +5,8 @@ void Scanner::setSkip(string const &fname)
     ifstream in;
     Errno::open(in, fname);
 
-    ::copy(istream_iterator<Line>(in), istream_iterator<Line>(), 
-            back_inserter(d_skipFiles));
+    for_each(istream_iterator<Line>(in), istream_iterator<Line>(), 
+            FnWrap::unary(add, d_skipFiles));
 
     d_skip = &Scanner::skip;
 }
